fix text overlap behind nav bar

--- a/src/views/Layout.css
+++ b/src/views/Layout.css
@@ -19,7 +19,6 @@
 }
 
 .Layout-header {
-	/*background-color: var(--color-bg);*/
 	padding-bottom: 0.5rem;
 	padding-top: max(env(safe-area-inset-top), 1rem);
 	display: flex; /* Uses flex display */
@@ -64,23 +63,20 @@
 }
 
 .Layout-main {
-	margin: 0 auto;
 	padding-block: 3.13rem;
 	padding-block-end: 6.26rem;
-	width: min(72ch, 100%);
 	display: flex;
 	flex-flow: column nowrap;
 	align-items: center;
+	overflow-y: scroll;
 }
 
 .Nav {
-	bottom: 0;
 	display: flex;
 	flex-direction: row;
 	padding-bottom: max(env(safe-area-inset-bottom), 1rem);
 	padding-top: 1rem;
 	place-content: center;
-	position: fixed;
 	width: 100%;
 }
 
