--- a/src/views/List.css
+++ b/src/views/List.css
@@ -4,7 +4,7 @@ ul {
 	display: flex;
 	flex-direction: column;
 	gap: 0.5rem;
-	align-self: stretch;
+	width: min(72ch, 100%);
 }
 
 .filter-form {
